# chuk-mcp-runtime

./: .env.example  .gitignore  Makefile  README.md  config.yaml  pyproject.toml
examples/: advanced_proxy_integration.py  artifact_smoke_test.py  artifact_smoke_test_native.py  artifact_usage_examples.py  artifacts_debug_integration.py  artifacts_e2e_demo.py  artifacts_e2e_demo_s3.py  artifacts_smoke_test.py  debug_metadata_test.py  debug_proxy_config.py  debug_registry_test.py  debug_server_execution.py  debug_server_tools.py  debug_session_tools.py  debug_streaming.py  debug_tools_registry.py  demo_timeout_tools.py  diagnostic_demo.py  direct_proxy_integration.py  e2e_demo.py  github_e2e_demo.py  github_inspector.py  github_proxy_demo.py  http_test.py  inspect_registry.py  json_concat_demo.py  list_tools_test.py  mcp_artifact_grid_demo.py  mcp_debug.py  mcp_debug_tools_list.py  mcp_e2e_demo.py  mcp_minimal.py  mcp_simple_test.py  mcp_test_protocol.py  minimal_test.py  openai_compatibility_demo.py  openai_compatible_config.yaml  openai_only_demo.py  proxy_config.yaml  proxy_server_example.py  (+8 more)
examples/echo_server/: main.py
examples/simple_server/: config.yaml  main.py  sse_roundtrip.py
src/chuk_mcp_runtime/: entry.py  proxy_cli.py
src/chuk_mcp_runtime/artifacts/: __init__.py  admin.py  artifact_store.py  base.py  batch.py  core.py  exceptions.py  metadata.py  presigned.py  store.py
src/chuk_mcp_runtime/common/: mcp_tool_decorator.py  openai_compatibility.py  verify_credentials.py
src/chuk_mcp_runtime/grid/: hub_sandbox.py
src/chuk_mcp_runtime/proxy/: manager.py  tool_wrapper.py
src/chuk_mcp_runtime/server/: server.py  server_registry.py
src/chuk_mcp_runtime/session/: __init__.py  session_management.py
tests/: conftest.py  test_config_loader.py  test_entry.py  test_entry_basic.py  test_entry_extended.py  test_entry_integration.py  test_integration.py  test_mcp_tool_decorator.py  test_proxy_integration.py  test_server.py  test_server_json.py  test_server_registry.py
tests/common/: test_errors.py  test_mcp_tool_decorator.py  test_mocks.py  test_openai_compat_wrappers.py  test_openai_compatibility.py  test_tool_naming.py  test_verify_credentials.py
tests/proxy/: test_proxy_integration.py  test_proxy_manager.py  test_tool_wrapper.py
tests/server/: test_config_loader_logging.py  test_logging_config.py  test_server.py  test_server_json.py  test_server_session.py
tests/session/: test_session_management.py
(+5 files in other folders)
