[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-mcp-runtime"
version = "0.1.9"
description = "Generic CHUK MCP Runtime for MCP Servers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Chris Hay", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
websocket = ["websockets>=10.0"]
dev = [
]

[project.scripts]
chuk-mcp-server = "chuk_mcp_runtime.main:main"

[tool.setuptools.packages.find]
where = ["src"]  # Change from "." to "src"
include = ["chuk_mcp_runtime*"]

[tool.setuptools.package-data]
chuk_mcp_runtime = ["config.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
