[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-mcp-runtime"
version = "0.1.23"
description = "Generic CHUK MCP Runtime for MCP servers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Chris Hay", email = "your.email@example.com"}]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "chuk-tool-processor>=0.1.7",
  "mcp>=1.6.0",
  "pydantic>=2.10.6",
  "pyyaml>=6.0.2",
  "pyjwt>=2.10.1",
  "cryptography>=44.0.3"
]

[project.optional-dependencies]
websocket = ["websockets>=10.0"]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.4.6",
]

[project.scripts]
chuk-mcp-server = "chuk_mcp_runtime.main:main"
chuk-mcp-proxy  = "chuk_mcp_runtime.proxy_cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["chuk_mcp_runtime*"]

[tool.setuptools.package-data]
chuk_mcp_runtime = [
  "config.yaml",          # default runtime config
  "py.typed",             # typing marker
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
asyncio_mode = "strict"
